--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 
   </div>
 
+  <footer>By Abraham Licá</footer>
+
 
   <script src="imagens.js" charset="utf-8"></script>
   <script src="script.js" charset="utf-8"></script>
