--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jogo da Memória</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="media-query.css">
 </head>
 
 <body>
