--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
 
@@ -21,72 +20,57 @@
   </div>
 
 
-  <div class="container">
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
-      <div class="card-img">
-        <img src="" alt="" class="img">
-      </div>
-
+  <div class="container-master">
+    <div class="container">
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+        <div class="card-img">
+          <img src="" alt="" class="img">
+        </div>
+    </div>
   </div>
 
   <footer>By Abraham Licá</footer>
